chore(seed):add mini to live

--- a/assets/live/index.html
+++ b/assets/live/index.html
@@ -24,6 +24,9 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/live/nest-rating.html">Mini Rating</a>
+                </li>
+                <li class="list-item">
                   <a href="/live/nest-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -44,6 +47,9 @@
             <div class="panel-heading">Widget Formatted Page - Nest Protect Smoke CO2 Detector</div>
             <div class="panel-body">
               <ul class="list-item-group">
+                <li class="list-item">
+                  <a href="/live/nest-rating-formatted.html">Mini Rating</a>
+                </li>
                 <li class="list-item">
                   <a href="/live/nest-rnr-formatted.html">RnR</a>
                 </li>
@@ -68,6 +74,9 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/live/thermostat-rating.html">Mini Rating</a>
+                </li>              
+                <li class="list-item">
                   <a href="/live/thermostat-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -88,6 +97,9 @@
             <div class="panel-heading">Widget Formatted Page- Nest Thermostat</div>
             <div class="panel-body">
               <ul class="list-item-group">
+                <li class="list-item">
+                  <a href="/live/thermostat-rating-formatted.html">Mini Rating</a>
+                </li>  
                 <li class="list-item">
                   <a href="/live/thermostat-rnr-formatted.html">RnR</a>
                 </li>
@@ -112,6 +124,9 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/live/wemo-rating.html">Mini Rating</a>
+                </li>                
+                <li class="list-item">
                   <a href="/live/wemo-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -132,6 +147,9 @@
             <div class="panel-heading">Widget Formatted Page- Belkin Wemo Switch</div>
             <div class="panel-body">
               <ul class="list-item-group">
+                <li class="list-item">
+                  <a href="/live/wemo-rating-formatted.html">Mini Rating</a>
+                </li>                
                 <li class="list-item">
                   <a href="/live/wemo-rnr-formatted.html">RnR</a>
                 </li>
@@ -156,6 +174,9 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/live/mount-rating.html">Mini Rating</a>
+                </li>                
+                <li class="list-item">
                   <a href="/live/mount-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -176,6 +197,9 @@
             <div class="panel-heading">Widget Formatted Page- IronRidge Ballasted Roof Mount, self-describing strings</div>
             <div class="panel-body">
               <ul class="list-item-group">
+                <li class="list-item">
+                  <a href="/live/mount-rating-formatted.html">Mini Rating</a>
+                </li>                
                 <li class="list-item">
                   <a href="/live/mount-rnr-formatted.html">RnR</a>
                 </li>
@@ -200,6 +224,9 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/live/rail-rating.html">Mini Rating</a>
+                </li>                
+                <li class="list-item">
                   <a href="/live/rail-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -220,6 +247,9 @@
             <div class="panel-heading">Widget Formatted Page- IronRidge standard rail, multi-byte languages</div>
             <div class="panel-body">
               <ul class="list-item-group">
+                <li class="list-item">
+                  <a href="/live/rail-rating-formatted.html">Mini Rating</a>
+                </li>                
                 <li class="list-item">
                   <a href="/live/rail-rnr-formatted.html">RnR</a>
                 </li>
