--- a/assets/live/mount-all-formatted.html
+++ b/assets/live/mount-all-formatted.html
@@ -35,6 +35,9 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="main block">
+        <li:rating-widget company-guid="ecohaus" sku="eco-roof-rail"></li:rating-widget>
+      </div>
+      <div>
         <li:reviews-widget company-guid="ecohaus" sku="eco-roof-rail"></li:reviews-widget>
       </div>
     </div>
