--- a/assets/live/mount-all.html
+++ b/assets/live/mount-all.html
@@ -6,6 +6,8 @@
   <script id="li-syndicate" src="http://distributed.lithium.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<li:rating-widget company-guid="ecohaus" sku="eco-roof-rail"></li:rating-widget>
+  <hr />
     <li:reviews-widget company-guid="ecohaus" sku="eco-roof-rail"></li:reviews-widget>
   <hr />
     <li:wants-button default-price="999" max-price="1099" min-price="799" company-guid="ecohaus" sku="eco-roof-rail" buy-reasons-list="[&quot;Endorsement-Reason-7-30-char**&quot;,&quot;Endorsement-Reason-6-30-char##&quot;,&quot;Endorsement-Reason-5-30-char%%&quot;,&quot;Endorsement-Reason-4-30-char_+&quot;,&quot;1&quot;]"></li:wants-button>
