--- a/assets/live/nest-all.html
+++ b/assets/live/nest-all.html
@@ -6,6 +6,8 @@
   <script id="li-syndicate" src="http://distributed.lithium.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<li:rating-widget company-guid="ecohaus" sku="eco-nest"></li:rating-widget>
+  <hr />
     <li:reviews-widget sku="eco-nest" company-guid="ecohaus"></li:reviews-widget>
   <hr />
     <li:wants-button default-price="129" max-price="150" min-price="120" company-guid="ecohaus" sku="eco-nest" buy-reasons-list="[&quot;easy-installation&quot;,&quot;energy saving&quot;,&quot;reliable&quot;,&quot;looks-great&quot;,&quot;Smartphone-apps&quot;]"></li:wants-button>
