--- a/assets/live/thermostat-all.html
+++ b/assets/live/thermostat-all.html
@@ -6,6 +6,8 @@
   <script id="li-syndicate" src="http://distributed.lithium.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<li:rating-widget company-guid="ecohaus" sku="eco-thermostat"></li:rating-widget>
+  <hr />
     <li:reviews-widget company-guid="ecohaus" sku="eco-thermostat"></li:reviews-widget>
   <hr />
     <li:wants-button default-price="259" max-price="281" min-price="230" company-guid="ecohaus" sku="eco-thermostat" buy-reasons-list="[&quot;easy-installation&quot;,&quot;energy saving&quot;,&quot;reliable&quot;,&quot;looks-great&quot;,&quot;intuitive&quot;]"></li:wants-button>
