--- a/assets/live/thermostat-rating.html
+++ b/assets/live/thermostat-rating.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.lithium.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-  <li:reviews-widget sku="eco-wemo" company-guid="ecohaus"></li:reviews-widget>
+  	<li:rating-widget company-guid="ecohaus" sku="eco-thermostat"></li:rating-widget>
 </body>
 </html>
