--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -50,6 +50,7 @@
                 <li class="list-item">
                 <a href="/test/qa-rating-formatted.html">Rating Mini</a>
                 </li>
+                <li class="list-item">
                   <a href="/test/qa-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -75,6 +76,7 @@
                 <li class="list-item">
                 <a href="/test/qa1-rating.html">Rating Mini</a>
                 </li>
+                <li class="list-item">
                   <a href="/test/qa1-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -98,6 +100,7 @@
                 <li class="list-item">
                   <a href="/test/qa1-rating-formatted.html">Rating Mini</a>
                 </li>
+                <li class="list-item">
                   <a href="/test/qa1-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -123,6 +126,7 @@
                 <li class="list-item">
                 <a href="/test/qa2-rating.html">Rating Mini</a>
                 </li>
+                <li class="list-item">
                   <a href="/test/qa2-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -146,6 +150,7 @@
                 <li class="list-item">
                   <a href="/test/qa2-rating-formatted.html">Rating Mini</a>
                 </li>
+                <li class="list-item">                
                   <a href="/test/qa2-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -168,7 +173,7 @@
               <ul class="list-item-group">
                 <li class="list-item">
                   <a href="/test/distributed-qa-nest.html">Nest</a>
-                </li>
+                </li>                
                 <li class="list-item">
                   <a href="/test/distributed-qa-thermostat.html">Themostat</a>
                 </li>
