--- a/assets/live/nest-all-formatted.html
+++ b/assets/live/nest-all-formatted.html
@@ -35,6 +35,7 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="main block">
+        <li:rating-widget company-guid="ecohaus" sku="eco-nest"></li:rating-widget>
         <li:reviews-widget sku="eco-nest" company-guid="ecohaus"></li:reviews-widget>
       </div>
     </div>
