--- a/assets/live/rail-all.html
+++ b/assets/live/rail-all.html
@@ -6,6 +6,8 @@
   <script id="li-syndicate" src="http://distributed.lithium.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<li:rating-widget company-guid="ecohaus" sku="eco-rail"></li:rating-widget>
+  <hr />
     <li:reviews-widget sku="eco-rail" company-guid="ecohaus"></li:reviews-widget>
   <hr />
     <li:wants-button default-price="350" max-price="400" min-price="300" company-guid="ecohaus" sku="eco-rail" buy-reasons-list="[&quot;Hebrew: אני יכול לאכול זכוכית,&quot;,&quot;Neo-Melanesian: Mipela inap ka&quot;,&quot;Estonian: Ma võin klaasi süüa,&quot;,&quot;Maltese: L-istess riħ li uproo&quot;,&quot;ฉัน&quot;]"></li:wants-button>
