--- a/assets/live/wemo-all-formatted.html
+++ b/assets/live/wemo-all-formatted.html
@@ -35,6 +35,7 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="main block">
+        <li:rating-widget company-guid="ecohaus" sku="eco-wemo"></li:rating-widget>
         <li:reviews-widget sku="eco-wemo" company-guid="ecohaus"></li:reviews-widget>
       </div>
     </div>
