chore(seed):tidy usability of local

--- a/assets/local/index.html
+++ b/assets/local/index.html
@@ -9,9 +9,9 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" ng-href="/test">dev-ecohaus widgets</a>
+          <a class="navbar-brand" ng-href="/test">Local</a>
           <ul class="nav navbar-nav">
-            <li class="active"><a ng-href="/test">dev-ecohausgotwidgets.gotpantheon.com</a></li>
+            <li class="active"><a ng-href="/test">Run the associated gulp testbuilder commands to see</a></li>
           </ul>
         </div>
       </div>
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Widget Full Page - Samsung TV Typical Data</div>
+            <div class="panel-heading">Full Page: Product - Samsung TV, run gulp test-builder --file=testpagetvreviews.json --upload </div>
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
@@ -44,7 +44,7 @@
         </div>
         <div class="col-lg-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Widget Formatted Page - Samsung TV Typical Data</div>
+            <div class="panel-heading">Formatted Page: Product - Samsung TV,  Typical Data, run gulp test-builder --file=testpagetvreviews.json --upload  </div>
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Widget Full Page - Sorcerer's Stone, Self Describing Strings</div>
+            <div class="panel-heading">Full Page - Product: HP Sorcerer's Stone, Type of Data Self Describing Strings, run gulp test-builder --file=testpagestringsdescribed.json --upload</div>
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
@@ -94,7 +94,7 @@
         </div>
         <div class="col-lg-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Widget Formatted Page- Sorcerer's Stone, Self Describing Strings</div>
+            <div class="panel-heading">Formatted Page - Product: HP Sorcerer's Stone, Type of Data Self Describing Strings, run gulp test-builder --file=testpagestringsdescribed.json --upload</div>
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Widget Full Page - Chamber of Secrets, Multi-Byte Language Data</div>
+            <div class="panel-heading">Full Page: Product HP - Chamber of Secrets, Data Type - Multi-Byte Language Data, run -  gulp test-builder --file=testpagelanguages.json --upload</div>
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
@@ -144,7 +144,7 @@
         </div>
         <div class="col-lg-6">
           <div class="panel panel-default">
-            <div class="panel-heading">Widget Formatted Page- Chamber of Secrets, Multi-Byte Language Data</div>
+            <div class="panel-heading">Formatted Page: Product HP - Chamber of Secrets, Data Type - Multi-Byte Language Data, run -  gulp test-builder --file=testpagelanguages.json --upload</div>
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
