seed(chore):remove un

--- a/assets/local/index.html
+++ b/assets/local/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -161,24 +161,6 @@
                 </li>
                 <li class="list-item">
                   <a href="/local/qa2-all-formatted.html">All</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">dev-ecohaus/distributed.qa widgets</div>
-            <div class="panel-body">
-              <ul class="list-item-group">
-                <li class="list-item">
-                  <a href="/local/distributed-qa-nest.html">Nest</a>
-                </li>                
-                <li class="list-item">
-                  <a href="/local/distributed-qa-thermostat.html">Themostat</a>
-                </li>
-                <li class="list-item">
-                  <a href="/local/distributed-qa-wemo.html">Wemo</a>
                 </li>
               </ul>
             </div>
