--- a/assets/local/index.html
+++ b/assets/local/index.html
@@ -38,6 +38,9 @@
                 <li class="list-item">
                   <a href="/local/qa-all.html">All</a>
                 </li>
+                <li class="list-item">
+                  Click <a href="http://localhost:1337/widgets/review-form/sony/product-sony-hawley-tv?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
+                </li>
               </ul>
             </div>
           </div>
@@ -87,6 +90,9 @@
                 </li>
                 <li class="list-item">
                   <a href="/local/qa1-all.html">All</a>
+                </li>
+                <li class="list-item">
+                  Click <a href="http://localhost:1337/widgets/review-form/sony/product-sony-hawley1?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
                 </li>
               </ul>
             </div>
@@ -138,6 +144,9 @@
                 <li class="list-item">
                   <a href="/local/qa2-all.html">All</a>
                 </li>
+                                <li class="list-item">
+                  Click <a href="http://localhost:1337/widgets/review-form/sony/product-sony-hawley2?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
+                </li>
               </ul>
             </div>
           </div>
@@ -162,6 +171,7 @@
                 <li class="list-item">
                   <a href="/local/qa2-all-formatted.html">All</a>
                 </li>
+              
               </ul>
             </div>
           </div>
