(chore)seed:added form only

--- a/assets/live/index.html
+++ b/assets/live/index.html
@@ -38,6 +38,9 @@
                 <li class="list-item">
                   <a href="/live/nest-all.html">All</a>
                 </li>
+                <li class="list-item">
+                  Click <a href="http://distributed.lithium.com/widgets/review-form/ecohaus/product-ecohaus-eco-nest?redirect=http%3A%2F%2Fhslithosphere.lithium.com&">here</a> to go to the review form.
+                </li>
               </ul>
             </div>
           </div>
@@ -87,6 +90,9 @@
                 </li>
                 <li class="list-item">
                   <a href="/live/thermostat-all.html">All</a>
+                </li>
+                <li class="list-item">
+                  Click <a href="http://distributed.lithium.com/widgets/review-form/ecohaus/product-ecohaus-eco-thermostat?redirect=http%3A%2F%2Fhslithosphere.lithium.com&">here</a> to go to the review form.
                 </li>
               </ul>
             </div>
@@ -138,6 +144,9 @@
                 <li class="list-item">
                   <a href="/live/wemo-all.html">All</a>
                 </li>
+                <li class="list-item">
+                  Click <a href="http://distributed.lithium.com/widgets/review-form/ecohaus/product-ecohaus-eco-wemo?redirect=http%3A%2F%2Fhslithosphere.lithium.com&">here</a> to go to the review form.
+                </li>
               </ul>
             </div>
           </div>
@@ -188,6 +197,9 @@
                 <li class="list-item">
                   <a href="/live/mount-all-formatted.html">All</a>
                 </li>
+                <li class="list-item">
+                  Click <a href="http://distributed.lithium.com/widgets/review-form/ecohaus/product-ecohaus-eco-roof-rail?redirect=http%3A%2F%2Fhslithosphere.lithium.com&">here</a> to go to the review form.
+                </li>
               </ul>
             </div>
           </div>
@@ -237,6 +249,9 @@
                 </li>
                 <li class="list-item">
                   <a href="/live/rail-all.html">All</a>
+                </li>
+                <li class="list-item">
+                  Click <a href="http://distributed.lithium.com/widgets/review-form/ecohaus/product-ecohaus-eco-rail?redirect=http%3A%2F%2Fhslithosphere.lithium.com&">here</a> to go to the review form.
                 </li>
               </ul>
             </div>
