--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -38,6 +38,9 @@
                 <li class="list-item">
                   <a href="/test/qa-all.html">All</a>
                 </li>
+               <li class="list-item">
+                  Click <a href="http://distributed.qa.lcloud.com/widgets/review-form/sony/product-sony-hawley-tv?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
+                </li>
               </ul>
             </div>
           </div>
@@ -88,6 +91,9 @@
                 <li class="list-item">
                   <a href="/test/qa1-all.html">All</a>
                 </li>
+                <li class="list-item">
+                  Click <a href="http://distributed.qa.lcloud.com/widgets/review-form/sony/product-sony-hawley1?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
+                </li>
               </ul>
             </div>
           </div>
@@ -137,6 +143,9 @@
                 </li>
                 <li class="list-item">
                   <a href="/test/qa2-all.html">All</a>
+                </li>
+                <li class="list-item">
+                  Click <a href="http://distributed.qa.lcloud.com/widgets/review-form/sony/product-sony-hawley2?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
                 </li>
               </ul>
             </div>
