chore(endpoint): point to int-rnr vs distributed.qa

--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -39,7 +39,7 @@
                   <a href="/test/qa-all.html">All</a>
                 </li>
                <li class="list-item">
-                  Click <a href="http://distributed.qa.lcloud.com/widgets/review-form/sony/product-sony-hawley-tv?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
+                  Click <a href="http://int-rnr.dev.aws.lcloud.com/widgets/review-form/sony/product-sony-hawley-tv?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
                 </li>
               </ul>
             </div>
@@ -92,7 +92,7 @@
                   <a href="/test/qa1-all.html">All</a>
                 </li>
                 <li class="list-item">
-                  Click <a href="http://distributed.qa.lcloud.com/widgets/review-form/sony/product-sony-hawley1?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
+                  Click <a href="http://int-rnr.dev.aws.lcloud.com/widgets/review-form/sony/product-sony-hawley1?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
                 </li>
               </ul>
             </div>
@@ -145,7 +145,7 @@
                   <a href="/test/qa2-all.html">All</a>
                 </li>
                 <li class="list-item">
-                  Click <a href="http://distributed.qa.lcloud.com/widgets/review-form/sony/product-sony-hawley2?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
+                  Click <a href="http://int-rnr.dev.aws.lcloud.com/widgets/review-form/sony/product-sony-hawley2?redirect=http%3A%2F%2Flithosphere.lithium.com&">here</a> to go to the review form.
                 </li>
               </ul>
             </div>
