--- a/assets/test/qa-all.html
+++ b/assets/test/qa-all.html
@@ -3,7 +3,7 @@
 <head>
   <title>Widgets - All</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+  <script id="li-syndicate" src="http://int-rnr.dev.aws.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
 	<h1> Mini Rating Widget</h1>
