--- a/assets/test/qa-endorsement.html
+++ b/assets/test/qa-endorsement.html
@@ -3,7 +3,7 @@
 <head>
   <title>Widgets - Endorsement</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+  <script id="li-syndicate" src="http://int-rnr.dev.aws.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
   <body style="padding:0;margin:0;">
   <li:endorsements-widget reasons-list="[&quot;long lifespan&quot;,&quot;Slim Enclosure&quot;,&quot;Warranty&quot;,&quot;4K&quot;,&quot;Full array backlit&quot;]" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
