--- a/assets/test/qa-want.html
+++ b/assets/test/qa-want.html
@@ -3,7 +3,7 @@
 <head>
   <title>Widgets - Want</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+  <script id="li-syndicate" src="http://int-rnr.dev.aws.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
 	<li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"></li:wants-button></body>
