--- a/assets/test/qa1-want-formatted.html
+++ b/assets/test/qa1-want-formatted.html
@@ -4,7 +4,7 @@
   <title>Widgets - Want - Formatted</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-  <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+  <script id="li-syndicate" src="http://int-rnr.dev.aws.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
   <style>
     .header, .footer {
       min-height: 100px;
