--- a/assets/test/qa2-endorsement.html
+++ b/assets/test/qa2-endorsement.html
@@ -3,7 +3,7 @@
 <head>
   <title>Widgets - Endorsement</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+  <script id="li-syndicate" src="http://int-rnr.dev.aws.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
   <body style="padding:0;margin:0;">
   <li:endorsements-widget reasons-list="[&quot;Thai: ฉันสามารถกิน้ว&quot;,&quot;Bengali: গাছ সরে জমি&quot;,&quot;来&quot;,&quot;English: I can eat glass&quot;,&quot;Danish:Jeg kan spise&quot;]" sku="hawley2" company-guid="sony"></li:endorsements-widget>
